# keepass-sync

./: .gitignore  INSTALL.md  LICENSE  README.de.md  README.en.md  README.es.md  README.md  RELEASE_TEMPLATE.md  TEST.md  config.example.json  install.py  sync.py
autoit/: DEPENDENCIES.md  DETAILED_SETUP.md  README.md  sync.au3  test_json.au3
cobol/: Makefile  README.md  sync.cbl
cpp/: CMakeLists.txt  DETAILED_SETUP.md  Makefile  README.md  sync.cpp
docs/: INSTALL.de.md  INSTALL.en.md  INSTALL.es.md  TEST.de.md  TEST.en.md  TEST.es.md
go/: DETAILED_SETUP.md  README.md  sync.go
lang/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  zh.json
linux/: install.sh  sync_ftp.sh
mac/: sync_ftp.sh
nodejs/: DETAILED_SETUP.md  README.md  package.json  sync.js
php/: .htaccess  DETAILED_SETUP.md  README.md  nginx.conf  sync.php
powershell/: DETAILED_SETUP.md  README.md  sync.ps1
python/: DETAILED_SETUP.md  README.md  installer.py  sync_ftp.py
windows/: sync_ftp.bat  sync_ftp.ps1
